Update book modal size, style buttons and fix too long line according to PEP8

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,6 +33,10 @@ body {
   font-weight: bold;
 }
 
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+  background-color:#daf7f7;
+}
+
 .list-inline {
   padding-left: 7rem;
 }
